--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,86 @@
+altair==5.5.0
+annotated-types==0.7.0
+attrs==25.3.0
 automata-lib==9.0.0
+blinker==1.9.0
+blis==1.3.0
 cached_method==0.1.0
+cachetools==5.5.2
+catalogue==2.0.10
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
+cloudpathlib==0.21.0
 colorama==0.4.6
+confection==0.1.5
+contourpy==1.3.2
+cycler==0.12.1
+cymem==2.0.11
+Flask==3.1.1
+fonttools==4.57.0
 frozendict==2.4.6
+gitdb==4.0.12
+GitPython==3.1.44
 graphviz==0.20.3
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+murmurhash==1.0.12
+narwhals==1.40.0
 networkx==3.4.2
 nltk==3.9.1
+numpy==2.2.5
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
+preshed==3.0.9
+protobuf==6.31.0
+pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl#sha256=c304fa04db3af73cd08a250feacf560506e15a2ec2469bd1b09f06847f6b455c
+pyarrow==20.0.0
+pydantic==2.11.4
+pydantic_core==2.33.2
+pydeck==0.9.1
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.36.2
 regex==2024.11.6
+requests==2.32.3
+rich==14.0.0
+rpds-py==0.25.1
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+smmap==5.0.2
+spacy==3.8.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+streamlit==1.45.1
+tenacity==9.1.2
+thinc==8.3.6
+toml==0.10.2
+tornado==6.5
 tqdm==4.67.1
+typer==0.15.3
+typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+wasabi==1.1.3
+watchdog==6.0.0
+weasel==0.4.1
+Werkzeug==3.1.3
+wrapt==1.17.2
